Bump version; Update CHANGELOG.md